lmdir = $(prefix)/share/pocketsphinx/model/lm

lmfiles = en/tidigits.dic			\
	en/tidigits.DMP				\
	en/turtle.dic				\
	en/turtle.DMP				\
	en_US/cmu07a.dic			\
	en_US/wsj0vp.5000.DMP			\
	zh_CN/gigatdt.5000.DMP			\
	zh_CN/mandarin_notone.dic		\
	zh_TW/gigatdt.5000.DMP			\
	zh_TW/mandarin_notone.dic

lm_DATA = $(lmfiles)
EXTRA_DIST = $(lmfiles)

