enlmdir = $(prefix)/share/pocketsphinx/model/lm/en
enlm_DATA = en/tidigits.dic			\
	en/tidigits.DMP				\
	en/tidigits.fsg				\
	en/turtle.dic				\
	en/turtle.DMP

enuslmdir = $(prefix)/share/pocketsphinx/model/lm/en_US
enuslm_DATA = \
	en_US/cmu07a.dic			\
	en_US/hub4.5000.DMP			\
	en_US/hub4.5000.dic			\
	en_US/wsj0vp.5000.DMP

zhcnlmdir = $(prefix)/share/pocketsphinx/model/lm/zh_CN
zhcnlm_DATA = \
	zh_CN/gigatdt.5000.DMP			\
	zh_CN/mandarin_notone.dic

zhtwlmdir = $(prefix)/share/pocketsphinx/model/lm/zh_TW
zhtwlm_DATA = \
	zh_TW/gigatdt.5000.DMP			\
	zh_TW/mandarin_notone.dic

EXTRA_DIST = $(zhtwlm_DATA) $(zhcnlm_DATA) $(enuslm_DATA) $(enlm_DATA)

